--- a/.github/workflows/delete-likes-cron.yml
+++ b/.github/workflows/delete-likes-cron.yml
@@ -20,4 +20,6 @@ jobs:
     - uses: actions/setup-python@v4
       with:
         python-version: '3.10'
+        cache: 'pip' # caching pip dependencies
+    - run: pip install -r requirements.txt
     - run: python main.py
